--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="welcome-container">
         <h1>Welcome to MindSprint</h1>
         <p>Test your knowledge and challenge yourself with our exciting quiz!</p>
-        <a href="QuizApp/homepage/homepage.html" class="btn">🚀 Begin Adventure</a>
+        <a href="https://sidjha0000.github.io/MindSprint/QuizApp/homepage/homepage.html" class="btn">🚀 Begin Adventure</a>
     </div>
 </body>
 </html>
