--- a/QuizApp/dashboard/dashboard.html
+++ b/QuizApp/dashboard/dashboard.html
@@ -14,8 +14,8 @@
 </head>
 <body>
     <div class="toggler-box">
-        <i class="fa-solid fa-bars toggler-icon"></i>
-        <i class="fa-solid fa-xmark d-none toggler-icon"></i>
+        <i class="fa-solid fa-bars toggler-icon open-icon"></i>
+        <i class="fa-solid fa-xmark toggler-icon d-none close-icon"></i>
     </div>
     <div class="side-nav">
         <div class="profile-pic"></div>
