--- a/QuizApp/company/company.html
+++ b/QuizApp/company/company.html
@@ -23,7 +23,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <div class="navbar-nav w-100 justify-content-end">
-                        <a href="file:///C:/web_dev/QuizApp/homepage/homepage.html" class="nav-link">Home</a>
+                        <a href="https://sidjha0000.github.io/MindSprint/QuizApp/homepage/homepage.html" class="nav-link">Home</a>
                         <a href="file:///C:/web_dev/QuizApp/Portfolio/index.html" class="nav-link">Portfolio</a>
                         <a href="file:///C:/web_dev/QuizApp/about/about.html" class="nav-link">About Us</a>
                         <a href="file:///C:/web_dev/QuizApp/Contact/contact.html" class="nav-link">Contact</a>
