--- a/QuizApp/company/company.html
+++ b/QuizApp/company/company.html
@@ -24,9 +24,9 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <div class="navbar-nav w-100 justify-content-end">
                         <a href="https://sidjha0000.github.io/MindSprint/QuizApp/homepage/homepage.html" class="nav-link">Home</a>
-                        <a href="file:///C:/web_dev/QuizApp/Portfolio/index.html" class="nav-link">Portfolio</a>
-                        <a href="file:///C:/web_dev/QuizApp/about/about.html" class="nav-link">About Us</a>
-                        <a href="file:///C:/web_dev/QuizApp/Contact/contact.html" class="nav-link">Contact</a>
+                        <a href="https://sidjha0000.github.io/MindSprint/QuizApp/Portfolio/index.html" class="nav-link">Portfolio</a>
+                        <a href="https://sidjha0000.github.io/MindSprint/QuizApp/about/about.html" class="nav-link">About Us</a>
+                        <a href="https://sidjha0000.github.io/MindSprint/QuizApp/contact/contact.html" class="nav-link">Contact</a>
                         <a href="#" class="nav-link btn signup-btn">Sign up</a>
                         <a href="#" class="nav-link d-none btn login-btn">Sign In</a>
                     </div>
